--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
+    "csrf": "^3.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "mysql2": "^3.14.3",
     "twilio": "^5.8.0"
   }
